name:                xlsx-tabular
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/kkazuo/xlsx-tabular#readme
license:             BSD3
license-file:        LICENSE
author:              Kazuo Koga
maintainer:          obiwanko@me.com
copyright:           (c) 2016 Kazuo Koga
category:            Codec
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Xlsx.Util.Tabular
  build-depends:       base >= 4.7 && < 5
                     , xlsx >= 0.2 && < 1
                     , bytestring >= 0.10 && < 1
                     , text >= 1.2 && < 2
                     , lens >= 4.13 && < 5
                     , containers >= 0.5 && < 1
  default-language:    Haskell2010

test-suite xlsx-tabular-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xlsx-tabular
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kkazuo/xlsx-tabular
